Consertando caminhos dos arquivos que estavam quebrados

--- a/Dia-5/index5.html
+++ b/Dia-5/index5.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <a href="../index-main.html">
+        <a href="../index.html">
             <img class="imagem-logo" src="assets/logo-7dof-js-day5.png" alt="Logo do 7 days of code junto com a logo do JavaScript">
         </a>
         <img class="imagem-barra" src="assets/barra-7dof-js-day5.png" alt="Barra com a contagem dos dias do 7 days of code de JS">
