--- a/Dia-6/index-6.html
+++ b/Dia-6/index-6.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section class="container-principal">
-        <a href="../index-main.html">
+        <a href="../index.html">
             <img src="../Dia-1/img/7-days_JS-logo.png" alt="Logo do 7 days of code junto com a logo do JavaScript" class="container__imagem-logo">
         </a>
         <img src="assets/barra-7doc-6day-JS.png" alt="Barra com a contagem dos dias do 7 days of code de JS" class="container__imagem-barra">
