--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="container-enunciando">Aqui nessa página você irá encontrar uma lista contendo todos os desafios feitos durante todos os 7 dias que duraram o 7 Days OF Code para Mim. Acesse-os Abaixo:</p>
             <ul class="lista">
                 <li class="lista-item">
-                    <a href="Dia-1/index.html">1° Dia Do Desafio: #7DaysOfCode - Lógica JS 1/7: Operações Booleanas</a>
+                    <a href="Dia-1/index-1.html">1° Dia Do Desafio: #7DaysOfCode - Lógica JS 1/7: Operações Booleanas</a>
                 </li>
                 <ol class="lista-item">
                     <p>&#8226; 2° Dia Do Desafio: #7DaysOfCode - Lógica JS 2/7: 👩🏽‍💻 Variáveis</p>
