--- a/Dia-1/index-1.html
+++ b/Dia-1/index-1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <a href="../index-main.html">
+        <a href="../index.html">
             <img src="img/7-days_JS-logo.png" alt="Logo do 7 days of code junto com a logo do JavaScript" class="container__imagem-logo">
         </a>
         <img src="img/first-barra-7-days_JS.png" alt="Barra com a contagem dos dias do 7 days of code de JS" class="container__imagem-barra">
