Renomeando arquivos que tinham nomes gerando problema

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="Dia-2/Desafio-Oficial/index-2.html">Desafio 1 Oficial</a>
                     </li>
                     <li>
-                        <a href="Dia-2/Desafio-100%-Opcional/index-op_1.html">Dasafio 2 Opcional</a>
+                        <a href="Dia-2/Desafio-100%-Opcional/index-2.html">Dasafio 2 Opcional</a>
                     </li>
                 </ol>
                 <li class="lista-item">
